# MissionCtrl

./: .env.example  .gitignore  README.md  blog.md  client.py  colab_notebook.ipynb  environment.py  google_colab.ipynb  grpo_completion.py  grpo_rewards.py  inference.py  notebook.ipynb  openenv.yaml  pyproject.toml  reward_model.py  scripts.py  test_pipeline.py  train.py
kaggle/: kernel-metadata.example.json
missionctrl-training/: README.md  dataset-metadata.json  environment.py  reward_model.py  train.py
server/: app.py  environment.py
tests/: test_engine.py  test_env_parity.py  test_inference_playbook.py  test_reward_model.py  test_train_grpo.py
